# door_pi

./: .gitignore  setup-raspi.md
ansible/: ansible.cfg  hosts  readme.md  setup-client.yml  setup-rpi-image.yml  setup-rpi-readonly.yml  update-client.yml
door_ext_photorelay/: door_ext_photorelay.net  door_ext_photorelay.pro
door_ext_photorelay/gerber/: door_ext_photorelay-B_SilkS.gbr  door_ext_photorelay-Edge_Cuts.gbr  door_ext_photorelay-F_Cu.gbr  door_ext_photorelay-F_Mask.gbr  door_ext_photorelay-PTH.drl
door_if/: door_if-cache.lib  door_if.kicad_pcb  door_if.net  door_if.sch
door_if.r2/: door_if-cache.lib  door_if.kicad_pcb
door_if2/: door_if2.kicad_pcb  door_if2.net  door_if2.pro  door_if2.sch  fp-info-cache
door_if2/gerber/: door_if2-B_Cu.gbr  door_if2-B_Mask.gbr  door_if2-B_SilkS.gbr  door_if2-F_Mask.gbr  door_if2-F_SilkS.gbr  door_if2-job.gbrjob
door_manager/: Pipfile  config-gpio-r1.json  config-gpio-r2.json  config.json.example  config.json.example-dormakaba  config.json.example-gildor  config.json.example-usb  door-manager.service  door-manager@.service  door-open  door_hal.py  door_manager.py  pyproject.toml  requirements.txt  test_cli.py
door_manager/debian/: changelog  control  dirs  files  install
pcb-case/: DINrail_Clip.fcstd  DINrail_Clip.stl  General_lit.stl  LICENSE.txt  Pi4_DIN_case.stl  Pi4_DIN_case_2.stl  README  if3-usb-case.FCStd  if4-usb-case.FCStd  if4-usb-case.v2.FCStd  if4-usb-case.v2.stl  raspi-hub-case.FCStd
pcb-test/: Pipfile  dps.py  if4test.py  pcb-test.py
uc/: Makefile  config.json  machine.py  main.py  test_cli.py
(+110 files in other folders)
