tool.setuptools.py-modules = ["door_manager", "door_hal"]
[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "door-manager"
version = "0.1.0"
license = {text = "GPL-3.0"}
requires-python = ">=3.7"

dependencies = [
    "decorated-paho-mqtt==1.0.5",
    "docopt~=0.6.2",
    "paho-mqtt~=2.1.0",
    "pyserial~=3.5",
    "pyudev~=0.24.3",
    "rpi.gpio~=0.7.1",
]

[project.scripts]
door-manager = "door_manager:main"
